--- a/index.html
+++ b/index.html
@@ -2,81 +2,77 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script
-src="https://code.jquery.com/jquery-3.4.1.js"
-integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 
-<title>New York Times</title>
+    <title>New York Times</title>
 </head>
 
 <body>
-<div class="container">
-<div class="jumbotron">
-<h1>New York Times Search</h1>
-</div>
-
-<div class="row">
-<div class="col-1g-12">
-    <div class="panel panel-default">
-        <div class="panel-haeading">
-            <h3 class="panel-title">Search Parameters</h3>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>New York Times Search</h1>
         </div>
-        <div class="panel-body">
-            <form action="/action_page.php">
-                <div class="form-group">
-                    <label for="search">search term</label>
-                    <input type="text" class="form-control" id="search">
-                </div>
-                <div class="form-group">
-                    <label for="sel1">Number of records to retrieve:</label>
-                    <select class="form-control" id="numRecords">
-                        <option value="1">1</option>
-                        <option value="5" selected>5</option>
-                        <option value="10">10</option>
-                    </select>
+
+        <div class="row">
+            <div class="col-1g-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Search Parameters</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form action="/action_page.php">
+                            <div class="form-group">
+                                <label for="search"> Search term</label>
+                                <input type="text" class="form-control" id="search">
+                            </div>
+                            <div class="form-group">
+                                <label for="sel1"> Number of Records to Retrieve:</label>
+                                <select class="form-control" id="numRecords">
+                                    <option value="1">1</option>
+                                    <option value="5" selected>5</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="startYear">Start Year:</label>
+                                <input type="text" class="form-control" id="startYear">
+                            </div>
+                            <div class="form-group">
+                                <label for="endYear">End Year:</label>
+                                <input type="text" class="form-control" id="endYear">
+                            </div>
+                            <button id="searchBtn" type="submit" class="btn btn-default">Search</button>
+                        </form>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="startYear">Start Year:</label>
-                    <input type="text" class="form-control" id="startYear">
-                </div>
-                <div class="form-group">
-                    <label for="endYear">End Year:</label>
-                    <input type="text" class="form-control" id="endYear">
-                </div>
-                <button id="searchBtn" type="submit" class="btn btn-default">Search</button>
-                <button type="button" class="btn btn-default">clear</button>
+            </div>
 
-            </form>
         </div>
+
+        <div class="row">
+            <div class="col-1g-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Search Results</h3>
+                    </div>
+                    <div class="panel-body" id="wellSection">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
-
-</div>
-
-</div>
-
-<div class="row">
-<div class="col-1g-12">
-    <div class="panel panel-default">
-        <div class="panel-haeading">
-            <h3 class="panel-title">Search Results</h3>
-        </div>
-        <div class="panel-body">
-            <div class="well"></div>
-        </div>
-    </div>
-</div>
-
-</div>
-
-
-</div>
 
 </body>
 <script src="script.js"></script>
